<resources>
    <string name="app_name">Pedidos casi YA</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="nuevo_pedido">Nuevo Pedido</string>
    <string name="ver_lista_de_productos">Ver Lista de productos</string>
    <string name="historial_de_pedidos">Historial de Pedidos</string>
    <string name="seleccionar_una_categoria">Seleccionar una categoria</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="datos_del_pedido">Datos del pedido</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="modo_de_entrega">Modo de entrega</string>
    <string name="retira_en_local">Retira en local</string>
    <string name="envio_a_domicilio">Envio a domicilio</string>
    <string name="direccion_de_envio">Direccion de envio</string>
    <string name="hora_solicitada_hh_mm">Hora solicitada (hh:mm)</string>
    <string name="cantidad_a_pedir">Cantidad a pedir</string>
    <string name="agregar">Agregar</string>
    <string name="pedidos_realizados">Pedidos realizados</string>
    <string name="nuevo">Nuevo</string>
    <string name="men">Menú</string>
    <string name="todo">TODO</string>
    <string name="detalles">Detalles</string>
    <string name="borrar">borrar</string>
    <string name="textview">TextView</string>


    <string name="canal_estado_nombre">canal_estado_nombre</string>
    <string name="canal_estado_descr">canal_estado_descr</string>
    <string name="preparar_pedidos">Preparar Pedidos</string>
</resources>
